Fix for bug #26038: X() value of empty NOT NULL POINT is neither NULL nor NOT NULL

Having maybe_null flag unset for geometry/spatial functions leads to
wrong Item_func_isnull::val_int()'s results.
Fix: set maybe_null flag and add is_null() methods.